--- a/.github/workflows/os-workflow.yml
+++ b/.github/workflows/os-workflow.yml
@@ -2,34 +2,37 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Check out Code
+        uses: actions/checkout@v4
+
   deliverit:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out Code
-    - uses: actions/checkout@v3
+      - name: Check out Code
+        uses: actions/checkout@v4
 
-    - name: build Docker Image
-      uses: mr-smithers-excllent/docker-build-push@v6
-      with:
-          image: Dockerized-Laravel-Authn.-App/Laravel Auth App
-          registery: docker.io
+      - name: Build Docker Image
+        uses: mr-smithers-excllent/docker-build-push@v6
+        with:
+          image: Dockerized-Laravel-Authn.-App/Laravel-Auth-App # Corrected Docker image name
+          registry: docker.io
           dockerfile: Dockerfile
-          username: "${secrets.hub_email}"
-          password: "${secrets.hub_password}"
+          username: "${{ secrets.hub_email }}"
+          password: "${{ secrets.hub_password }}"
           tags: latest
+
     
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
